# honey_id-types

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml
.github/workflows/: rust.yml
config/: enums.ron  version.toml
config/schema_lists/000_public/: 000_public_connect.ron  001_auth_api.ron  002_waitlist.ron  003_kardvip.ron
config/schema_lists/010_api_key/: 010_apikey_connect.ron  011_token_api.ron  011_token_endpoints.ron
config/schema_lists/010_auth/: 010_connect.ron  011_token_api.ron
config/schema_lists/010_platform/: 010_platform_connect.ron  011_platform_api.ron
config/schema_lists/020_auth/: 020_connect.ron  021_callback_api.ron  021_token_api.ron
docs/: README.md  services.json
docs/error_codes/: error_codes.json  error_codes.md
scripts/: regenerate_endpoints.sh  release.sh
src/: client.rs  config.rs  error.rs  handlers.rs  lib.rs  tables.rs  types.rs  ws.rs
src/client/: connect.rs  honeyid_ws_conn.rs  start_auth.rs  submit_username.rs  token.rs
src/handlers/: app.rs  auth_to_app.rs  convenience_utils.rs  public.rs  token.rs  user_to_app.rs
src/handlers/app/: auth.rs
src/handlers/convenience_utils/: generic_auth_handler.rs  token_management.rs  user_management.rs
src/handlers/token/: auth.rs  receive_token.rs  recieve_token.rs
src/tables/: token.rs
src/types/: api_key_endpoints.rs  app.rs  endpoints.rs  entity.rs  enums.rs  error.rs  generated.rs  id_entities.rs  public_endpoints.rs  traits.rs
src/types/entity/: app.rs  user.rs
src/types/traits/: token_storage.rs
