[package]
name = "honey_id-types"
version = "0.1.0"
edition = "2024"

[dependencies]
endpoint-libs = { git = "https://github.com/pathscale/endpoint-libs.git", branch = "logging-stability", features = [
    "ws",
] }
num-derive = "0.4"
num-traits = "0.2"
derive_more = { version = "2.1.1", features = ["default", "display", "from", "into"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
uuid = { version = "1.8", features = ["v4", "serde"] }
serde_json = "1.0"
smart-default = "0.7.1"
url = "2.5.8"
secrecy = "0.10.3"
tokio = "1.49.0"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
eyre = "0.6.12"
