[package]
name = "honey_id-types"
version = "1.3.4"
edition = "2024"
authors = [
    "Maxim Volkov <https://github.com/Handy-caT>",
    "Veon <dveonloch@protonmail.com>",
]
description = "Common types and convenience code to be used within Pathscale projects that make use of honey.id Auth."
repository = "https://github.com/pathscale/honey_id-types"
readme = "README.md"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
derive_more = { version = "2.1.1", features = [
    "default",
    "display",
    "from",
    "into",
] }
# endpoint-libs = { git = "https://github.com/pathscale/endpoint-libs.git", features = [
#     "ws",
# ] }

endpoint-libs = { version = "1.3.4", features = ["ws"] }

eyre = "0.6.12"
futures = "0.3.31"
num-derive = "0.4"
num-traits = "0.2"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7.1"
smart-serde-default = "0.1"
strum = "0.26"
strum_macros = "0.26"
tokio = "1.49.0"
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-webpki-roots",
] }
url = "2.5.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1.44"
worktable = "0.9.0-alpha3"
rkyv = { version = "0.8.9", features = ["uuid-1"] }
